<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarInsert"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/irna_round"
                android:paddingStart="80dp"
                android:paddingEnd="0dp"
                android:contentDescription="@string/none">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/juduldaftarpasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarInsert"
        android:text="@string/pendaftaran_pasien"
        android:textSize="30sp"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_below="@id/juduldaftarpasien">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvNamaLengkap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/nama_lengkap"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edtNamaLengkap"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:inputType="text"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tvNamaPanggilan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_panggilan"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/edtNamaPanggilan"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama_panggilan"
            android:inputType="text"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tvJenisKelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <Spinner
            android:id="@+id/spinnerJenisKelamin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:id="@+id/tvTanggalLahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/edtTanggalLahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tanggal_lahir"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/inputTanggalLahir"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="147dp"
                android:contentDescription="@string/none"
                app:srcCompat="@mipmap/calendar" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvStatusPernikahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/status_pernikahan"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <Spinner
            android:id="@+id/spinnerStatusPernikahan"
            android:layout_width="300dp"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:id="@+id/tvTempatLahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/tempat_lahir"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
           <EditText
                android:id="@+id/edtTempatLahir"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/tempat_lahir"
               android:inputType="text"
                android:textSize="20sp" />
        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/alamat"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/edtAlamat"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:inputType="text"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tvProvinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/provinsi"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <Spinner
            android:id="@+id/spinnerProvinsi"
            android:layout_width="300dp"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:id="@+id/tvKabupatenKota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/kabupaten_kota"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />
        <Spinner
            android:id="@+id/spinnerKabupatenKota"
            android:layout_width="300dp"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:id="@+id/tvKodepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kodepos"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin" />
        <EditText
            android:id="@+id/edtKodepos"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/kodepos"
            android:inputType="text"
            android:textSize="20sp"
            />
        <LinearLayout
            android:id="@+id/Lineaelayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btnInserting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/btnBackGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationViewInsert"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/black"
        app:itemIconTint="@color/bottom_navigation_color"
        app:itemTextColor="@color/bottom_navigation_color"
        app:menu="@menu/navigation" />
</RelativeLayout>
