<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarHistory"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/irna_round"
                android:paddingStart="80dp"
                android:paddingEnd="0dp"
                android:contentDescription="@string/none">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riwayat_pasien"
        android:layout_below="@id/toolbarHistory"
        android:textSize="30sp"
        />

    <LinearLayout
        android:id="@+id/linearViewNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/textView">
        <TextView
            android:id="@+id/textViewNama"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_pasien"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/textViewNamaColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/editTextNama"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/cari_nama"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/ic_search_category_default"
            android:contentDescription="@string/none"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/linearViewNama">
        <TextView
            android:id="@+id/textViewID"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/id_pasien"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/textViewIDColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/editTextID"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/cari_id"
            android:textSize="24sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/tombolHistory"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_below="@id/linearViewID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        app:srcCompat="@mipmap/medical_history"
        android:contentDescription="@string/none"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tombolHistory">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

        </android.support.v7.widget.RecyclerView>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationViewHistory"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/black"
        app:itemIconTint="@color/bottom_navigation_color"
        app:itemTextColor="@color/bottom_navigation_color"
        app:menu="@menu/navigation" />

</RelativeLayout>